# gpt_repo

./: .gitignore  CMakeLists.txt
app/: main.cpp
include/core/: file.hpp  logger.hpp  shapes.hpp
src/: file.cpp  logger.cpp  shapes.cpp
tests/: core_tests.cpp
